--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,17 +3,23 @@
     justify-content: center;
     align-items: center;
     height: 2rem;
-    background-color: var(--orange);
 }
 
 .linksList {
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    font-family: 'Koulen', sans-serif;
+    font-size: 36px;
+    gap: 3rem;
 }
 
-.linksList a {
-    color: var(--cream);
+a {
+    color: var(--orange);
+    text-decoration: none;
+}
+
+a.active {
+    color: var(--red);
     text-decoration: none;
 }
 
