--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,12 +9,12 @@ body {
 }
 
 .blueBar{
-  position: absolute;
-  top: 1050px;
+  position: relative;
+  bottom: 300px;
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: #10254E;
-
+  z-index: -999;
 }
 nav ul {
   list-style: none;
