--- a/src/components/FeaturedRecipes/FeaturedRecipes.module.css
+++ b/src/components/FeaturedRecipes/FeaturedRecipes.module.css
@@ -4,7 +4,7 @@
   font-display: swap;
   font-weight: 400;
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/berkshire-swash@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/berkshire-swash@latest/latin-400-normal.woff) format('woff');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 
@@ -17,21 +17,21 @@
   padding-top: 25px;
 }
 
-.blueBar{
+.blueBar {
   position: absolute;
   top: 360px;
   width: 100%;
   height: 300px;
- z-index: 2;
- background-color: #012D5E;
+  z-index: 2;
+  background-color: #012D5E;
 }
 
 .featuredSection h3 {
-  font-family: 'Berkshire Swash', cursive; 
+  font-family: 'Berkshire Swash', cursive;
   font-size: 2.5rem;
   margin-top: .5rem;
   margin-bottom: 1rem;
-  color: #1e3a8a; 
+  color: #1e3a8a;
   padding: 10px;
 }
 
@@ -40,7 +40,7 @@
   justify-content: space-around;
 
   margin-bottom: 100px;
-  padding-bottom: 0; 
+  padding-bottom: 0;
   z-index: 3;
 }
 
@@ -52,7 +52,8 @@
   display: flex;
   flex-direction: column;
 }
-.featuredButton{
+
+.featuredButton {
   background-color: #A11015;
   border-radius: 20px;
   padding: 10px;
@@ -67,11 +68,11 @@
   padding: auto;
 }
 
-.title{
+.title {
   color: white;
 }
 
-.description{
+.description {
   font-size: 12pt;
   color: white;
   text-align: center;
@@ -90,16 +91,16 @@
   flex-direction: row;
 }
 
-section{
+section {
   display: flex;
   flex-direction: column;
 }
 
-.h3{
+h3 {
   font-family: 'Berkshire Swash', cursive;
 }
 
-.backdrop{
+.backdrop {
   position: absolute;
   background-color: #012D5E;
   width: 100vw;
