--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
-  background-color: #fdb813; 
+  background-color: #fdb813;
   color: #1b1b1b;
-  padding: 40px 20px; /* Increased padding for breathing room */
+  padding: 40px 20px;
+  /* Increased padding for breathing room */
   text-align: center;
   margin-top: 40px;
   box-sizing: border-box;
@@ -21,7 +22,7 @@
   margin: 0;
   display: flex;
   gap: 20px;
-  justify-content: center; 
+  justify-content: center;
 }
 
 .footer-links li {
@@ -37,9 +38,11 @@
 .footer-links li a:hover {
   text-decoration: underline;
 }
-.footer-social{
+
+.footer-social {
   padding: 20px;
 }
+
 .footer-social a {
   color: #1b1b1b;
   margin: 0 10px;
