--- a/src/components/FeaturedRecipes/FeaturedRecipes.module.css
+++ b/src/components/FeaturedRecipes/FeaturedRecipes.module.css
@@ -19,7 +19,7 @@
 
 .blueBar {
   position: absolute;
-  top: 360px;
+  top: 375px;
   width: 100%;
   height: 300px;
   z-index: 2;
@@ -56,12 +56,16 @@
 .featuredButton {
   background-color: #A11015;
   border-radius: 20px;
+  color: white;
   padding: 10px;
   font-family: 'Poppins', sans-serif;
   width: 200px;
   margin: auto;
 }
 
+.featuredButton:hover{
+  background-color: #932537;
+}
 .recipeCard img {
   width: auto;
   height: 350px;
@@ -100,11 +104,3 @@ h3 {
   font-family: 'Berkshire Swash', cursive;
 }
 
-.backdrop {
-  position: absolute;
-  background-color: #012D5E;
-  width: 100vw;
-  height: 200px;
-  bottom: -295px;
-  z-index: 0;
-};
