--- a/src/components/ShareRecipeSection/ShareRecipe.module.css
+++ b/src/components/ShareRecipeSection/ShareRecipe.module.css
@@ -6,6 +6,7 @@
 .shareRecipeSection {
   height: 100%;
   padding: 10px;
+  padding-bottom: 100px;
 }
 
 .round {
@@ -15,7 +16,7 @@
 
 .palabok {
   width: 50%;
-  padding: 50px
+  padding: 10px;
 }
 
 h3 {
@@ -37,6 +38,7 @@ p {
   font-family: 'Poppins', sans-serif;
   width: 200px;
   margin: auto;
+  color: white;
 }
 
 .innerContainer {
