--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,14 +8,14 @@
   width: 100vw;
 }
 
-.footer-top {
+.footerTop {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.footer-links {
+.footerLinks {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -24,38 +24,38 @@
   justify-content: center; 
 }
 
-.footer-links li {
+.footerLinksList {
   margin: 0;
 }
 
-.footer-links li a {
+.footerLinksLink {
   color: #1b1b1b;
   text-decoration: none;
   font-size: 16px;
 }
 
-.footer-links li a:hover {
+.footerLinksLink:hover {
   text-decoration: underline;
 }
-.footer-social{
+.footerSocial{
   padding: 20px;
 }
-.footer-social a {
+.footerSocialLink{
   color: #1b1b1b;
   margin: 0 10px;
   font-size: 20px;
   text-decoration: none;
 }
 
-.footer-social a:hover {
+.footerSocialLink:hover {
   color: #fff;
 }
 
-.footer-bottom {
+.footerBottom {
   margin-top: 20px;
 }
 
-.footer-bottom p {
+.footerBottomText {
   margin: 0;
   font-size: 14px;
 }
