--- a/src/components/ShareRecipeSection/ShareRecipe.module.css
+++ b/src/components/ShareRecipeSection/ShareRecipe.module.css
@@ -1,33 +1,38 @@
-.textContainer {
-  text-align: right;
-  color: orange;
-}
-.shareRecipeSection{
+.shareRecipeSection {
   height: 100%;
   padding: 10px;
 }
-.round{
+
+.innerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.round {
   border-radius: 50%;
   width: 500px;
 }
 
-.palabok{
-  width: 50%;
-  padding: 50px
+.textContainer {
+  text-align: right;
+  color: orange;
 }
 
-h3{
+.secretRecipeHeader {
   font-size: 32pt;
   font-family: 'Berkshire Swash', cursive;
   color: #A11015;
 }
 
-p{
+.shareRecipeText {
   font-family: 'Poppins', sans-serif;
   color: #A11015;
+  padding: 15px;
 }
 
-.shareButton{
+.shareButton {
   margin: 25px;
   background-color: #A11015;
   border-radius: 20px;
@@ -37,10 +42,13 @@ p{
   margin: auto;
 }
 
-.innerContainer{
+.palabokContainer {
+  position: relative;
+  justify-content: center;
+  padding: 25px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
 }
 
+.palabok {
+  width: 75%;
+}
