--- a/src/components/FeaturedRecipes/FeaturedRecipes.module.css
+++ b/src/components/FeaturedRecipes/FeaturedRecipes.module.css
@@ -8,7 +8,7 @@
 }
 
 .featuredSection {
-  height: 100%;
+  height: 700px;
   text-align: center;
   z-index: 1;
   position: relative;
@@ -44,9 +44,12 @@
 }
 
 .recipeImg {
-  width: auto;
-  height: 350px;
-  padding: auto;
+  width: 100%; 
+  max-width: 300px; 
+  height: 300px; 
+  object-fit: cover; 
+  border-radius: 10px;
+  margin: auto;
 }
 
 .recipeDescription {
