--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -15,10 +15,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  max-height: 500px;
   padding: 0;
   margin: 0;
-  background-color: #E98704
+  background-color: #E98704;
+  overflow: hidden;
 }
 .heroContainer{
   display: flex;
@@ -35,6 +39,7 @@ body {
   height: 100%;
   margin: auto;
   padding-left: 225px;
+  justify-content: center;
 }
 
 .heroHeader{
@@ -67,17 +72,18 @@ body {
 }
 
 .photoContainer{
-  display: flex;
-  flex-grow: 1;
+  flex:1;
   align-items: center;
   justify-content: flex-end;
-  height: 400px;
-  width: 90%;
+  height: 100%;
+  max-width: 900px;
+  object-fit: contain;
 }
 
 .tocino {
-  width: 75%;
-  height: 100%;
+  width: 100%;
+  height: auto; 
+  object-fit: cover;
 }
 
 
