--- a/src/components/ShareRecipeSection/ShareRecipe.module.css
+++ b/src/components/ShareRecipeSection/ShareRecipe.module.css
@@ -1,7 +1,5 @@
 .shareRecipeSection {
-  height: 100%;
-  padding: 10px;
-  padding-bottom: 300px;
+  height: 1000px;
 }
 
 .innerContainer {
@@ -9,6 +7,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  padding: 25px;
 }
 
 .round {
@@ -57,10 +56,9 @@
   justify-content: center;
   padding: 25px;
   display: flex;
-  
 }
 
 .palabok {
-  width: 75%;
-
+  max-width: 75%;
+  max-height: 500px;
 }
