--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -42,3 +42,9 @@
     margin-left: 1rem;
     color: var(--orange);
 }
+
+@media only screen and (max-width: 600px) {
+    .header {
+      max-width: 100vw;
+    }
+  }
