--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
     width: 20%;
 }
 
-.header .search {
+.search {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,8 +43,16 @@
     color: var(--orange);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1048px) {
     .header {
-      max-width: 100vw;
+        padding: .6rem 12% .8rem 2%
+      }
+  }
+
+@media only screen and (max-width: 800px) {
+
+    .search{
+        width: 80%;
     }
   }
+
