--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -13,14 +13,12 @@ body {
 
 .heroSection{
   display: flex;
+  flex-grow: 1;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 500px;
   flex-wrap: wrap;
-  max-height: 500px;
-  padding: 0;
-  margin: 0;
   background-color: #E98704;
   overflow: hidden;
 }
@@ -38,7 +36,7 @@ body {
   position: relative;
   height: 100%;
   margin: auto;
-  padding-left: 225px;
+  padding: 20px;
   justify-content: center;
 }
 
@@ -51,6 +49,7 @@ body {
 .heroText{
   padding: 10px;
   color: white;
+  font-size: 16px;
 }
 
 .shopButton {
@@ -72,28 +71,53 @@ body {
 }
 
 .photoContainer{
-  flex:1;
-  align-items: center;
-  justify-content: flex-end;
-  height: 100%;
-  max-width: 900px;
-  object-fit: contain;
+  display: block;
+position: relative;
+  width: 700px;
+  min-height: 100%;
 }
 
 .tocino {
   width: 100%;
-  height: auto; 
-  object-fit: cover;
+  height: 100%; 
 }
 
 
 
 
+@media only screen and (max-width: 800px) {
+  .heroContainer {
+    display: flex;
+    flex-direction: column;
+  }
 
+  .heroSection {
+    height: 600px;
+  }
 
+  .photoContainer{
+    max-width: 65%;
+    margin: auto;
+    min-height: 60%;
+  }
 
-@media only screen and (max-width: 600px) {
-  .hero-section, .hero-container {
-    max-width: 100vw;
+  .textContainer{ 
+    text-align: center;
+  }
+
+  .shopButton {
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 645px) {
+  .textContainer{
+    width: 80%;
+  }
+  .heroHeader {
+font-size: 28px;
+  }
+  .heroText{
+font-size: 12px;
   }
 }
