--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,6 +3,15 @@
     justify-content: center;
     align-items: center;
     height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Koulen', sans-serif;
+    font-size: 36px;
+    gap: 3rem;
+}
+
+.logo {
+    padding: 20px;
 }
 
 .linksList {
@@ -11,6 +20,7 @@
     font-family: 'Koulen', sans-serif;
     font-size: 36px;
     gap: 3rem;
+    padding: 20px;
 }
 
 a {
@@ -37,7 +47,7 @@ a.active {
 }
 
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 800px) {
     .navigation {
         display: flex;
     }
@@ -69,25 +79,35 @@ a.active {
 
     .mobileLogo{
         display: flex;
+        padding: 10px;
     }
 
     .mobileHeader {
         display: flex;
         z-index: 1000;
         width: 100%;
-        justify-content: space-between;
         align-items: center;
         padding: 10px 20px;
-        background-color: none; 
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+        background-color: var(--cream); 
     }
 
     .hamborgerContainer {
         display: block;
-        height: 20;
-        width: 24;
+        padding: 10px;
         background: none;
         border: none;
         cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 1350px) {
+    .linksList{
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 1048px) {
+    .linksList{
+        font-size: 20px;
     }
 }
