--- a/src/styles/ShoppingList.module.css
+++ b/src/styles/ShoppingList.module.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     gap: 1.5rem;
     height: 100%;
-    min-height: 71vh;
-    background-color: var(--cream);
+    min-height: 100vh;
+    background-color: var(--background);
     padding: 2rem 12.5%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .filterHeader {
@@ -87,9 +87,11 @@ select:hover {
     background-color: var(--white);
     border: #f3bc48 5px solid;
     border-radius: 12px;
+    transition: width 0.3s ease; /* Smooth transition for width change */
 }
 
 .search input {
+    display: flex;
     border: none;
     outline: none;
     background: transparent;
@@ -97,10 +99,11 @@ select:hover {
     margin: 0;
     height: 1.3rem;
     min-width: 160px;
+    width: 100%; /* Ensure input stretches with the parent */
 }
 
 .searchIcon {
-    margin:0 0.5rem;
+    margin: 0 0.5rem;
 }
 
 .cardContainer {
@@ -142,6 +145,7 @@ select:hover {
         padding: 2rem 5%;
     }
     .search {
-        width: 100%;
+        min-width: 98.5%; 
+        width: 98.5%; 
     }
 }
