--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -13,7 +13,9 @@
 .logo {
     padding: 20px;
 }
-
+.hamborgerContainer{
+    font-family: 'Berkshire Swash', cursive;
+}
 .linksList {
     display: flex;
     justify-content: space-between;
