--- a/src/styles/Recipes.module.css
+++ b/src/styles/Recipes.module.css
@@ -81,6 +81,48 @@ body {
     text-align: center;
 }
 
+.recipeCategory {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  
+  .thumbnailContainer {
+    margin-bottom: 12px;
+  }
+  
+  .thumbnail {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  
+  .recipeName {
+    font-size: 18px;
+    font-weight: bold;
+    color: #10254E;
+    margin-bottom: 8px;
+  }
+  
+  .browseRecipes {
+    background-color: #A11015;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  
+  .browseRecipes:hover {
+    background-color: #8F080D;
+  }
+  
+
 @media (max-width: 768px) {
     .name {
         font-size: 50px; 
