--- a/src/components/ShoppingListCard/ShoppingListCard.module.css
+++ b/src/components/ShoppingListCard/ShoppingListCard.module.css
@@ -67,6 +67,7 @@
 }
 
 .totalCookTime {
+    display: block;
     padding: 0rem 1rem .5rem;
     color: var(--blue)
 }
@@ -77,23 +78,26 @@
     list-style-type: none;
 }
 
-.ingredientItem{
+.ingredientItem {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
-    height: 1.5rem;
+    line-height: 1.5;
 }
 
 .strikethrough {
     text-decoration: line-through;
+    color: var(--blue);
 }
 
-.ingredientsLeft{
+.ingredientsLeft {
     display: flex;
-    justify-content: center;
+    align-items: center;
     font-family: 'Poppins', sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    gap: 0.5rem;
+    flex: 1;
 }
 
 .checkbox{
@@ -102,18 +106,19 @@
 
 .ingredientName{}
 
-.ingredientAmount{
+.ingredientAmount {
     font-family: 'Poppins', sans-serif;
     font-size: 0.8rem;
+    text-align: right;
+    white-space: nowrap;
 }
 
 .specialtyIcon{
     color: var(--blue);
-    padding-left: 0rem;
-    padding-top: 0.9rem;
-    margin-left: -0.6rem;
+    flex-shrink: 0;
+    vertical-align: middle;
 }
 
-/*MEDIA*/
+
 
   
