--- a/src/components/ShoppingListCard/ShoppingListCard.module.css
+++ b/src/components/ShoppingListCard/ShoppingListCard.module.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 32%; 
-    max-width: 100%;  /* Ensures the container doesn't exceed its parent's width */
-    min-width: 320px;  /* Keeps the container at least 300px wide */
+    max-width: 100%;  
+    min-width: 320px; 
     background-color: var(--white);
     border: var(--yellow) solid 6px;
     border-radius: 15px;
     padding-bottom: 1.5rem;
-    box-sizing: border-box;  /* Ensures padding and borders are included in width/height calculation */
+    box-sizing: border-box;  
 }
 
 .imageContainer {
