--- a/src/styles/Sinigang.module.css
+++ b/src/styles/Sinigang.module.css
@@ -33,6 +33,21 @@
     max-width: 200px; 
 }
 
+.addShop {
+    margin-top: 20px; 
+    padding: 10px 20px;
+    background-color: #10254E;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    width: 200px;
+    align-self: center; 
+    margin-bottom: 20px;
+}
+
+
 .name {
     font-size: 40px;
     margin-top: 10px;
