--- a/src/styles/PancitPalabok.module.css
+++ b/src/styles/PancitPalabok.module.css
@@ -91,7 +91,7 @@
 
 .stepsDetails {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Two columns */
+    grid-template-columns: 1fr 1fr; 
     gap: 40px; 
     width: 100%; 
     padding: 16px;
@@ -128,10 +128,10 @@
     object-fit: cover;
 }
 
-/* Responsive adjustments */
+
 @media (max-width: 768px) {
     .stepsDetails {
-        grid-template-columns: 1fr; /* Single column for smaller screens */
+        grid-template-columns: 1fr; 
     }
 
     .keyInfo {
@@ -154,11 +154,11 @@
 
 @media (max-width: 600px) {
     .ingredientsGrid {
-        grid-template-columns: 1fr; /* Single column for very small screens */
+        grid-template-columns: 1fr;
     }
 
     .stepsDetails {
-        grid-template-columns: 1fr; /* Adjust steps to single column */
+        grid-template-columns: 1fr; 
     }
 
     .stepsImage {
@@ -227,7 +227,7 @@
 
 .ingredientsGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
     gap: 16px; 
     list-style: none; 
     padding: 0; 
@@ -237,7 +237,7 @@
 .ingredientsGrid li {
     display: flex;
     align-items: center;
-    margin: 
+    margin: 0;
 }
 
 .customCheckbox {
