--- a/src/styles/Forum.module.css
+++ b/src/styles/Forum.module.css
@@ -52,13 +52,13 @@
     padding-bottom: 32px;
 }
 
-.section > button {
+.section {
     border: none;
-    background-color: var(--cream);
     font-weight: 700;
     color: var(--red);
     font-size: 16px;
     cursor: pointer;
+    background-color: var(--yellow);
 }
 
 .sections {
