--- a/src/styles/ShoppingList.module.css
+++ b/src/styles/ShoppingList.module.css
@@ -112,6 +112,24 @@ select:hover {
     gap: 1rem;
 }
 
+.clearButton {
+    display: inline-block;
+    align-self: end;
+    width: 180px;
+    height: 2.2rem;
+    background-color: var(--red);
+    border-color: var(--red);
+    color: var(--white);
+    border-radius: 12px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.clearButton:hover {
+    background-color: rgb(255, 62, 55);
+}
+
 @media (max-width: 1440px) {
     .cardContainer {
         justify-content: center;
